# SpinSimulationVS

./: .gitignore  CMakeLists.txt  main.cpp  tools.cpp  tools.h
